@@ -7,7 +7,6 @@
 #ifndef __CATALOG_H
 #define __CATALOG_H
 
-#include <ws2_32.h>
 #include <wsahelp.h>
 
 typedef struct _CATALOG_ENTRY {
