@@ -1,5 +1,11 @@
 2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
+	* lib/ws2_32/include/.cvsignore: New file.
+	* lib/ws2_32/makefile (TARGET_PCH): Set to include/ws2_32.h.
+	* lib/ws2_32/include/[catalog.h, handle.h]: Don't include ws2_32.h.
+
+2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
 	* lib/gdi32/include/.cvsignore: New file.
 	* lib/gdi32/.cvsignore: Remove *.gch.
 
